--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -158,5 +158,16 @@ $$
 
 > 如果到达某一轮时，是甲赢，假设此时是第 $n$ 轮，如果甲最终赢，则后缀一定是 "甲甲甲"，为了方便研究，记 $E$ 为当前轮次甲赢，记 $F$ 为当前轮次乙赢，则后缀一定是 $EEE$ 且前面 $n-3$ 轮不能出现 $EEE$ 和 $FF$ 且最后一个必定是 $F$，这种概率是多少呢？这种概率当然用「线性dp」来解，那能不能用一条公式求解呢？仔细想想，不能出现连续的 $EEE$ 和 $FF$ 说明该序列一定是由 $E$、$EE$、$F$ 组合，且 $E$ 和 $EE$ 不能连续出现，$F$ 与 $F$ 之间也不能连续出现;
 > 
-> $E$ 发生的概率为 $a$，$EE$ 发生的概率为 $a^2$，$F$ 发生的概率为 $b$
+> $E$ 发生的概率为 $a$，$EE$ 发生的概率为 $a^2$，$F$ 发生的概率为 $b$;
+> 
+> 若要让甲最终胜，则最后一定以 $F$ 结尾然后再接 $EEE$ 
+> 
+> 一开始要么 $F$ 发生，要么 $F$ 不发生；假设一开始 $F$ 并没有发生，且 $F$ 发生了 $n$ 次，则对于每一个 $F$ 的前面，要么发生 $E$ 要么发生 $EE$，所以对于这 $n$ 个位置可以发生概率总和为 $(a + a^2) ^ n$，有利于甲最终胜的概率为：$a^3(a+a^2)^nb^n$；若一开始 $F$ 发生了，且后续 $F$ 发生了 $n$ 次，有利于甲最终胜的概率为：$ba^3(a+a^2)^nb^n$，综上，甲最终胜的概率为：
+
+$$
+\sum^{\infty}_{n=0}(1+b)a^3(a+a^2)^nb^n=(1+b)a^3\sum^{\infty}_{n=0}(ab(1+a))^n
+$$
+
+> 根据等比数列可化成：
+
 
