--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -50,3 +50,75 @@ $$
 
 > 总共有 $C^N_n$ 种取法，取出 $m$ 个废品，这 $m$ 个废品的组合有 $C^M_m$ 种，剩下需要从 $N - M$ 中取出 $n - m$ 个产品，有 $C^{N-M}_{n-m}$ 种取法，所以答案为：
 
+$$
+\frac{C^M_m C^{N-M}_{n-m}}{C^N_n}
+$$
+
+---
+
+『题目』有 $n$ 双不同的鞋，现在需要你随机分成 $n$ 堆，每堆有 $2$ 个鞋子，问每一堆鞋都自成一对的概率是多少？
+
+> 总共有 $2n$ 个位置，有 $(2n)!$ 种随机排列方法；
+>
+> 总共有 $n$ 双鞋，有 $n!$ 种排列方法，由于每一堆都有 $2!$ 排列方法，所以总共有 $n!2^n$ 种可以自成一对的排列方法，概率为：
+
+$$
+\frac{n!2^n}{(2n)!}
+$$
+
+---
+
+『题目』有 $n$ 个男孩，$m$ 个女孩随机的**排成一列**，其中 $m \leq (n + 1)$，问任意两个女孩都不相邻的概率是多少？
+
+> 有 $n$ 个男孩，就有 $n + 1$ 个空位，从 $n + 1$ 个空位中选出 $m$ 个给女生坐，而这 $m$ 个女生又可以有 $m$ 种不同的排列方法，所以女生总共有 $C^{n + 1}_m * m!$ 种坐法
+>
+> 对于第一个女生可以选择 $n + 1$ 个座位，第二个女生可以选择 $n + 2$ 个座位，一直到第 $m$ 个女生可以选择 $n + m$ 个座位，所以总共有 $(n+1)(n+2)\cdots(n+m)=\frac{(n+m)!}{n!}$ 种选法
+>
+> 概率为：
+
+$$
+\frac{C^{n+1}_{m} * m!}{\frac{(n+m)!}{n!}}=\frac{C^{n+1}_{m}}{C^{n+m}_{m}}
+$$
+
+另外一种理解方法：
+
+> 先对这 $n$ 个男生自由排列，有 $n!$ 种排列方式，然后在 $n + 1$ 个位置中选出 $m$ 个位置自由排列，有 $P^{n+1}_{m}$ 种排列方式，所以女生互不相邻的排列方式有 $n!P^{n+1}_{m}$ 种
+>
+> 事件总和为 $n + m$ 个孩子的自由组合，有 $(n+m)!$ 种排列方式，所以概率为：
+
+$$
+\frac{n!P^{n+1}_{m}}{(n+m)!}=\frac{C^{n+1}_{m}}{C^{n+m}_{m}}
+$$
+
+---
+
+『题目』有 $n$ 个男孩，$m$ 个女孩随机的**排成一圈**，其中 $m \leq n$，问任意两个女孩都不相邻的概率是多少？
+
+> 将 $n$ 个不同的物品排成一列，有 $n!$ 种排列方法
+>
+> 将 $n$ 个不同的物品排成一圈，有 $\frac{n!}{n}$ 种排列方法，在排成一列的基础上，每一种排列因为开头设置不同会有 $n$ 种开头方式导致重复，所以要除以 $n$
+>
+> 回到题目，先对 $n$ 个男的围成一圈，有 $\frac{n!}{n}$ 种排列方法，从 $n$ 个相间位置中选取 $m$ 个，有 $C^n_m$ 种选法，女生可以对这 $m$ 个位置自由排列，所以满足任意两个女生不相邻的排列方式有 $\frac{n!m!C^n_m}{n}$ 种
+>
+> 这 $n + m$ 个孩子围成一圈总共有 $\frac{(n+m)!}{n+m}$ 种方式
+>
+> 概率为：
+
+$$
+\frac{\frac{n!m!C^n_m}{n}}{\frac{(n+m)!}{n+m}}=\frac{C^n_m * (n+m)}{C^{n+m}_m * n}=\frac{C^n_m}{C^{n+m-1}_m}
+$$
+
+---
+
+『题目』一个人在口袋里放了 $2$ 盒火柴，每盒 $n$ 支，每次抽烟时从口袋随机拿出一盒（抽出甲盒或乙盒）并用掉一支烟，到某次他迟早会发现：取出的那一盒空了，问这时候另外一盒恰好有 $m$ 支火柴的概率是多少？
+
+> 每一次抽取只有等概率两种选择，要么抽甲的，要么抽乙的，抽到一定时候，会发现抽到盒子里面没有烟了，这种概率是否符合一棵超级庞大的概率树呢？
+>
+> 由于发现某盒为空时就会停止，说明这棵概率树并不是一颗完全树，即叶子节点并不都处于同一层，但是我们可以添加虚拟节点来延长比较短的那个分支，让这棵树的叶子节点都处于同一层，计算概率时只需要统计由这个叶子节点引发的虚拟叶子节点的个数占总叶子节点的个数多少就可以求出该叶子节点引发的概率了
+>
+> 回到题目，要有利于题目条件的发生，则必须要抽 $2n - m + 1$ 次才能发现某盒已经空了，且剩下那一盒有 $m$ 支烟
+>
+> 所以总共的抽取方法有 $2 ^ {2n - m + 1}$ 种（每一次要么抽甲要么抽乙，等概率抽取）
+>
+> 最后一盒要么是甲空要么是乙空，所以有 $2$ 种镜像对称的结果，因为最后一次一定要抽取空盒，所以在 $2n - m$ 次中，需要分割成两份，第一份有 $n$ 个，第二份有 $n - m$ 个，有 $C^{2n-m}_{n}$ 种分法，有利于题目事件发生的概率为：
+
