--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -122,3 +122,22 @@ $$
 >
 > 最后一盒要么是甲空要么是乙空，所以有 $2$ 种镜像对称的结果，因为最后一次一定要抽取空盒，所以在 $2n - m$ 次中，需要分割成两份，第一份有 $n$ 个，第二份有 $n - m$ 个，有 $C^{2n-m}_{n}$ 种分法，有利于题目事件发生的概率为：
 
+$$
+\frac{2 * C^{2n-m}_{n}}{2 ^ {2n - m + 1}}=\frac{C^{2n-m}_{n}}{2n - m + 1}
+$$
+
+---
+
+『题目』有 $21$ 本不同的书，随机地分给 $17$ 个人，问 $6$ 个人得 $0$ 本，$5$ 个人得 $1$ 本，$2$ 人得 $2$ 本，$4$ 人得 $3$ 本这个事件发生的概率是多少？
+
+> 事件总和有 $17 ^ {21}$
+>
+> 若要有利于题目事件发生，需要对 $17$ 分组，第一组分出 $6$ 人，第二组分出 $5$ 人，第三组分出 $2$ 人，第四组分出 $4$ 人，有 $\frac{17!}{6!5!2!4!}$ 种分法；要将 $21$ 本书分成 $3$ 组，每组分别有 $\{5, 4, 12\}$ 本书，有 $\frac{21!}{5!4!12!}$ 种分法，对于第一组 $5$ 需要按个数 $1$ 排列有 $5!$ 种排列方法，对于第二组 $4$ 需要按照个数 $2$ 排列有 $\frac{4!}{2!2!}$ 种排列方法，对与第三组 $12$ 需要按照个数 $3$ 排列有 $\frac{12!}{3!3!3!3!}$ 种排列方法
+>
+> 有利于题目事件发生的概率为：
+
+$$
+\frac{\frac{17!}{6!5!2!4!} * \frac{21!}{5!4!12!} * 5! * \frac{4!}{2!2!} * \frac{12!}{3!3!3!3!}}{17 ^ {21}}=\frac{17!21!}{{2!}^3 {3!}^4 4! 5! 6! 17^{21}}
+$$
+
+---
