--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -130,14 +130,36 @@ $$
 
 『题目』有 $21$ 本不同的书，随机地分给 $17$ 个人，问 $6$ 个人得 $0$ 本，$5$ 个人得 $1$ 本，$2$ 人得 $2$ 本，$4$ 人得 $3$ 本这个事件发生的概率是多少？
 
-> 事件总和有 $17 ^ {21}$
+
+
+---
+
+『题目』$n$ 本书随机地分给甲、乙二人，问甲、乙各至少得到 $1$ 本书的概率是多少？
+
+> 事件总数有 $2 ^ n$ 种
 >
-> 若要有利于题目事件发生，需要对 $17$ 分组，第一组分出 $6$ 人，第二组分出 $5$ 人，第三组分出 $2$ 人，第四组分出 $4$ 人，有 $\frac{17!}{6!5!2!4!}$ 种分法；要将 $21$ 本书分成 $3$ 组，每组分别有 $\{5, 4, 12\}$ 本书，有 $\frac{21!}{5!4!12!}$ 种分法，对于第一组 $5$ 需要按个数 $1$ 排列有 $5!$ 种排列方法，对于第二组 $4$ 需要按照个数 $2$ 排列有 $\frac{4!}{2!2!}$ 种排列方法，对与第三组 $12$ 需要按照个数 $3$ 排列有 $\frac{12!}{3!3!3!3!}$ 种排列方法
->
-> 有利于题目事件发生的概率为：
+> 不利于题目事件发生，也就是甲得到 0 本或者乙得到 0 本，有 $2$ 种，所以有利于题目事件发生的概率为：
 
 $$
-\frac{\frac{17!}{6!5!2!4!} * \frac{21!}{5!4!12!} * 5! * \frac{4!}{2!2!} * \frac{12!}{3!3!3!3!}}{17 ^ {21}}=\frac{17!21!}{{2!}^3 {3!}^4 4! 5! 6! 17^{21}}
+1 - \frac{1}{2 ^ {n - 1}}
 $$
 
 ---
+
+『题目』甲、乙两人下棋，每局甲胜的概率为 $a$，乙胜的概率为 $b$，假设没有和局的情况发生这意味着 $a+b=1$ ，由于 $a > b$ 为了考虑公平性，最终决定胜负规则如下：到什么时候为止，甲连胜三局则甲胜；到什么时候为止，乙连胜两局则乙胜；问甲最终胜的概率？
+
+> 如果到达某一轮时，是甲赢，假设此时是第 $n$ 轮，如果甲最终赢，则后缀一定是 "甲甲甲"，为了方便研究，记 $E$ 为当前轮次甲赢，记 $F$ 为当前轮次乙赢，则后缀一定是 $EEE$ 且前面 $n-3$ 轮不能出现 $EEE$ 和 $FF$ 且最后一个必定是 $F$，这种概率是多少呢？这种概率当然用「线性dp」来解，那能不能用一条公式求解呢？仔细想想，不能出现连续的 $EEE$ 和 $FF$ 说明该序列一定是由 $E$、$EE$、$F$ 组合，且 $E$ 和 $EE$ 不能连续出现，$F$ 与 $F$ 之间也不能连续出现;
+> 
+> $E$ 发生的概率为 $a$，$EE$ 发生的概率为 $a^2$，$F$ 发生的概率为 $b$;
+> 
+> 若要让甲最终胜，则最后一定以 $F$ 结尾然后再接 $EEE$ 
+> 
+> 一开始要么 $F$ 发生，要么 $F$ 不发生；假设一开始 $F$ 并没有发生，且 $F$ 发生了 $n$ 次，则对于每一个 $F$ 的前面，要么发生 $E$ 要么发生 $EE$，所以对于这 $n$ 个位置可以发生概率总和为 $(a + a^2) ^ n$，有利于甲最终胜的概率为：$a^3(a+a^2)^nb^n$；若一开始 $F$ 发生了，且后续 $F$ 发生了 $n$ 次，有利于甲最终胜的概率为：$ba^3(a+a^2)^nb^n$，综上，甲最终胜的概率为：
+
+$$
+\sum^{\infty}_{n=0}(1+b)a^3(a+a^2)^nb^n=(1+b)a^3\sum^{\infty}_{n=0}(ab(1+a))^n
+$$
+
+> 根据等比数列可化成：
+
+
