--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -137,7 +137,7 @@ $$
 > 有利于题目事件发生的概率为：
 
 $$
-\frac{17!21!}{{2!}^3 {3!}^4 4! 5! 6! 17^{21}}
+\frac{\frac{17!}{6!5!2!4!} * \frac{21!}{5!4!12!} * 5! * \frac{4!}{2!2!} * \frac{12!}{3!3!3!3!}}{17 ^ {21}}
 $$
 
 ---
